--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
 -->
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
     id="org.chromium.socket"
-    version="1.1.3">
+    version="1.1.4">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -14,6 +14,7 @@
   <name>Chrome Apps Socket API</name>
 
   <dependency id="org.chromium.common" />
+  <dependency id="org.chromium.iosSocketsHelper" />
 
   <js-module src="socket.js" name="Socket">
     <clobbers target="chrome.socket" />
@@ -30,15 +31,8 @@
   </platform>
 
   <platform name="ios">
-    <framework src="Security.framework" />
-    <framework src="CFNetwork.framework" />
     <source-file src="src/ios/ChromeSocket.m" />
     <header-file src="src/ios/ChromeSocket.h" />
-
-    <source-file src="src/ios/third_party/GCDAsyncSocket.m" />
-    <header-file src="src/ios/third_party/GCDAsyncSocket.h" />
-    <source-file src="src/ios/third_party/GCDAsyncUdpSocket.m" />
-    <header-file src="src/ios/third_party/GCDAsyncUdpSocket.h" />
 
     <config-file target="config.xml" parent="/widget">
       <feature name="ChromeSocket">
