Implementations of chrome.system.cpu, .display, .memory, .network for ios
Closes #346 (pull request)
- Add auto tests for chrome.system.cpu plugin
- Implementation of chrome.system.cpu.getInfo for ios
- Add auto tests for chrome.system.display plugin
- Implementation of chrome.system.display.getInfo for ios
- Add auto tests for chrome.system.memory plugin
- Implementation of chrome.system.memory.getInfo for ios
- Add auto tests for chrome.system.network plugin
- Implementation of chrome.system.network.getNetworkInterfaces for ios
- Change chrome.socket to reuse/depend on implementation in chrome.system.network

--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,7 @@
 
   <dependency id="org.chromium.common" />
   <dependency id="org.chromium.iosSocketsCommon" />
+  <dependency id="org.chromium.system.network" />
 
   <js-module src="socket.js" name="Socket">
     <clobbers target="chrome.socket" />
