--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,9 @@
   </engines>
 
   <name>Chrome Apps Socket API</name>
+  <keywords>chrome,socket</keywords>
+  <repo>https://github.com/MobileChromeApps/mobile-chrome-apps.git</repo>
+  <issue>https://github.com/MobileChromeApps/mobile-chrome-apps/issues</issue>
 
   <dependency id="org.chromium.common" />
   <dependency id="org.chromium.iosSocketsCommon" />
