--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
   <issue>https://github.com/MobileChromeApps/mobile-chrome-apps/issues</issue>
 
   <dependency id="org.chromium.common" />
-  <dependency id="org.chromium.iosSocketsCommon" />
+  <dependency id="org.chromium.iossocketscommon" />
   <dependency id="org.chromium.system.network" />
 
   <js-module src="socket.js" name="Socket">
