--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
   found in the LICENSE file.
 -->
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-    id="org.chromium.socket"
+    id="cordova-plugin-chrome-apps-socket"
     version="1.2.3-dev">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
