Update dependencies to use NPM plugin ids

--- a/plugin.xml
+++ b/plugin.xml
@@ -16,8 +16,8 @@
   <repo>https://github.com/MobileChromeApps/mobile-chrome-apps.git</repo>
   <issue>https://github.com/MobileChromeApps/mobile-chrome-apps/issues</issue>
 
-  <dependency id="org.chromium.common" />
-  <dependency id="org.chromium.system.network" />
+  <dependency id="cordova-plugin-chrome-apps-common" />
+  <dependency id="cordova-plugin-chrome-apps-system-network" />
 
   <js-module src="socket.js" name="Socket">
     <clobbers target="chrome.socket" />
@@ -34,7 +34,7 @@
   </platform>
 
   <platform name="ios">
-    <dependency id="org.chromium.iossocketscommon" />
+    <dependency id="cordova-plugin-chrome-apps-iossocketscommon" />
     <source-file src="src/ios/ChromeSocket.m" />
     <header-file src="src/ios/ChromeSocket.h" />
 
