--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     }
   ],
   "author": "",
-  "license": "ISC",
+  "license": "BSD",
   "bugs": {
     "url": "https://github.com/MobileChromeApps/cordova-plugin-chrome-apps-socket/issues"
   },
