--- a/plugin.xml
+++ b/plugin.xml
@@ -16,8 +16,8 @@
   <repo>https://github.com/MobileChromeApps/cordova-plugin-chrome-apps-socket.git</repo>
   <issue>https://github.com/MobileChromeApps/cordova-plugin-chrome-apps-socket/issues</issue>
 
-  <dependency id="cordova-plugin-chrome-apps-common" />
-  <dependency id="cordova-plugin-chrome-apps-system-network" />
+  <dependency id="cordova-plugin-chrome-apps-common@1" />
+  <dependency id="cordova-plugin-chrome-apps-system-network@1" />
 
   <js-module src="socket.js" name="Socket">
     <clobbers target="chrome.socket" />
